# wfv-cli

./: .clangd  .gitignore  CMakeLists.txt  README.md  wfv.cc
.github/workflows/: release.yml
